<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/menu_about" />


        <item
            android:id="@+id/devFragment"
            android:icon="@drawable/ic_dev"
            android:title="@string/label_dev" />
        <item
            android:id="@+id/donationFragment"
            android:icon="@drawable/ic_donationssr"
            android:title="Donation" />
        <item
            android:id="@+id/socialFragment"
            android:icon="@drawable/ic_social_media"
            android:title="Social Media"/>

        <item
            android:id="@+id/sponsorFragment"
            android:icon="@drawable/ic_sponsor"
            android:title="Sponsorship"/>

    </group>
</menu>
