<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"

        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_580sdp">

    <TextView

        android:id="@+id/tv_menu_profile_name_id"
        android:text="Saidur Rahman"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp">

    </View>




    <LinearLayout
        android:id="@+id/hom_id"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp">

        <ImageView
            android:src="@drawable/ic_home_black"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            />

        <TextView

            android:text="@string/menu_home"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/about_id"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp">

        <ImageView

            android:src="@drawable/ic_about_black_24dp"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            />

        <TextView
            android:text="@string/menu_about"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/share_id"

        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp">

        <ImageView
            android:src="@drawable/ic_social"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            />

        <TextView
            android:text="@string/menu_share"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating_id"

        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20sdp"

        android:layout_marginLeft="@dimen/_20sdp">

        <ImageView
            android:src="@drawable/ic_stars_black"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            />

        <TextView
            android:text="@string/menu_rating"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/developer_id"

        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_20sdp"
        >

        <ImageView
            android:src="@drawable/ic_dev"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            />

        <TextView
            android:text="@string/label_dev"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp" />
    </LinearLayout>
        <LinearLayout

android:id="@+id/donation_id"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            >

            <ImageView
                android:src="@drawable/ic_dev"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="match_parent"
                />

            <TextView
                android:text="Donation"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/socialmedia_id"

            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            >

            <ImageView
                android:src="@drawable/ic_dev"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="match_parent"
                />

            <TextView
                android:text="Social Media"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp" />
        </LinearLayout>

</LinearLayout>
</LinearLayout>